--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: Environmental Monitoring
+title: PERK
 
 # Your name to show in the footer
 author: Kishore Kumar Jagadeesan
@@ -20,9 +20,8 @@ author: Kishore Kumar Jagadeesan
 ###############################################
 
 navbar-links:
-  About: "aboutme"
-  Software Tools:
-    - PrAna: "prana-app"
+  Demo App : "http://51.141.234.162/shiny/PERK/"
+  Documentation:
     - PERK: "perk-app"
   Publications: "pub-app"
 
